2005-06-13  Yves Combe  <yves@ycombe.net>

	* src/gcompris/gameutil.c: suppress parsing xml for l10n. Use gettext.
	PROFILS:
	* Registering boards at first run seems ok.

2005-06-11  Yves Combe  <yves@ycombe.net>

	* Change section behaviour in xml board description
	* some profils works: registering boards almost correct.

2005-06-11  Yves Combe  <yves@ycombe.net>

        Profils stuff again.

2005-06-05  Yves Combe  <yves@ycombe.net>

	PROFILS
	* Database init integrity and VERSION check.

2005-06-03  Yves Combe  <yves@ycombe.net>

	PROFILS
	* add gcompris_db.h gcompris_db.c (interface with sqlite).
	* create table on database creation (gcompris_db_init).

2005-05-30  Yves Combe  <yves@ycombe.net>

	* configure.in: disable gcompris-edit if --enable-profils
	* src/boards/Makefile.am: add PYTHON_LIBS for python module
	* src/gcompris/profile.c: initial import (empty functions, but compiles)

2005-05-30  Yves Combe <yves@ycombe.net>

	* src/gcompris/gcompris.c src/gcompris/properties.c src/gcompris/properties.h: 
	command line parameters for profils database

2005-05-27  Yves Combe  <yves@ycombe.net>

	* -l list feature
	PROFIL STUFF (depends on --enable-profils, work in progress)
	* add -e in gcompris.c, gameutil.c
	* add profile.h (profile.c missing again)
	* add profiles in properties.{c,h} and in gcompris.c
	* fix configure.in and src/gcompris/Makefile.am to compile profiles correctly.
	
2005-05-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/maze2DRelative.xml.in: improved help message
	* configure.in: improved by Yves to provide python detection on newer version
	added detection for cairo and sqllite but it's not used anywhere yet
	* acinclude.m4: created by Yves, contain python checkings code.

2005-05-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed by yves, on newer pygtk (2.6), gtk.True is deprecated
	and must be replaced by True. This solves the key double entry.
	In anim, fixed a bug when a photo was taken with right click on an anchor