@@ -1,5 +1,10 @@
 2005-06-13  Yves Combe  <yves@ycombe.net>
 
+	PROFILS
+	* Read board from db at load ! 
+
+2005-06-13  Yves Combe  <yves@ycombe.net>
+
 	* src/gcompris/gameutil.c: suppress parsing xml for l10n. Use gettext.
 	PROFILS:
 	* Registering boards at first run seems ok.
